@@ -2,6 +2,14 @@
 
 0.8 +
 =====================
+ * Moved 2.0.5 header.pt to skins/ResourceRegistries_20compatibility and
+   remove ResourceRegistries_20compatibility when Plone != 2.0.x
+   [fschulze]
+
+ * Check existance of stylesheets and javascripts before registering. This
+   fixes reinstallation.
+   [fschulze]
+
  * Removed duplicate getScripts function definition in tools/JSRegistry.py
    [fschulze]
 
